internal/xds/translator/testdata/out/xds-ir/accesslog-omit-empty-values.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        prefix: /
      name: direct-route
      route:
        cluster: direct-route-dest
        maxStreamDuration:
          maxStreamDuration: 30s
        upgradeConfigs:
        - upgradeType: websocket
